--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
+    "vuex-i18n": "^1.10.5",
     "vux": "^2.8.1"
   },
   "devDependencies": {
