--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
+    "better-scroll": "^1.9.1",
     "echarts": "^4.0.4",
     "fastclick": "^1.0.6",
     "mint-ui": "^2.2.13",
