--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-i18n": "^1.10.5",
-    "vux": "^2.8.1"
+    "vux": "^2.8.1",
+    "vux-uploader": "^0.1.9"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -32,6 +33,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
