--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1",
     "vuex-i18n": "^1.10.5",
     "vux": "^2.8.1"
