--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
     "better-scroll": "^1.10.0",
     "echarts": "^4.0.4",
     "fastclick": "^1.0.6",
-    "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1",
     "vuex-i18n": "^1.10.5",
-    "vux": "^2.8.1",
-    "vux-uploader": "^0.1.9"
+    "vux": "^2.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
