--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fastclick": "^1.0.6",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-lazyload": "^1.2.3",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1",
